development/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
   name: development-monitoring
---
