development/filebeat.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
    namespace: development-monitoring
    name: filebeat
    labels:
        app: filebeat
spec:
    selector:
        matchLabels:
            app: filebeat
    template:
        metadata:
            labels:
                app: filebeat
        spec:
            serviceAccountName: filebeat
            terminationGracePeriodSeconds: 30
            containers:
            -   name: filebeat
                image: docker.elastic.co/beats/filebeat:7.5.1
                args: [
                    "-c","/etc/filebeat.yml","-e"
                ]
                securityContext:
                    runAsUser: 0
                # resources:
                #     limits:
                #         memory: 200Mi
                #     requests:
                #         cpu: 100m
                #         memory: 100Mi
                volumeMounts:
                -   name: config
                    mountPath: /etc/filebeat.yml
                    readOnly: true
                    subPath: filebeat.yml   
                -   name: filebeat-indice-lifecycle
                    mountPath: /etc/indice-lifecycle.json
                    readOnly: true
                    subPath: indice-lifecycle.json
                -   name: filebeat-persistent-storage
                    mountPath: /usr/share/filebeat/data
                -   name: varlog
                    mountPath: /var/log
                    readOnly: true
                -   name: varlibdockercontainers
                    mountPath: /var/lib/docker/containers
                    readOnly: true
                -   name: dockersock
                    mountPath: /var/run/docker.sock
            volumes:
            -   name: config
                configMap:
                    defaultMode: 0600
                    name: filebeat-config
            -   name: filebeat-indice-lifecycle
                configMap:
                    defaultMode: 0600
                    name: filebeat-indice-lifecycle
            -   name: varlog
                hostPath:
                    path: /var/log
            -   name: varlibdockercontainers
                hostPath:
                    path: /var/lib/containers
            -   name: dockersock
                hostPath:
                    path: /var/run/docker.sock
            -   name: filebeat-persistent-storage
                persistentVolumeClaim:
                    claimName: filebeat-pvc
