development/metricbeat.yml
---
---
apiVersion: apps/v1
kind: DaemonSet
metadata: 
    namespace: development-monitoring
    name: metricbeat
    labels:
        app: metricbeat
spec:
    selector:
        matchLabels:
            app: metricbeat
    template:
        metadata:
            labels: 
                app: metricbeat
        spec:
            serviceAccountName: metricbeat
            terminationGracePeriodSeconds: 30
            hostNetwork: true
            dnsPolicy: ClusterFirstWithHostNet
            containers:
            -   name: metricbeat
                image: docker.elastic.co/beats/metricbeat:7.5.1
                args: [
                    "-c","/etc/metricbeat.yml",
                    "-e",
                    "-system.hostfs=/hostfs"
                ]
                securityContext:
                    runAsUser: 0
                volumeMounts:
                -   name: config
                    mountPath: /etc/metricbeat.yml
                    readOnly: true
                    subPath: metricbeat.yml
                -   name: metricbeat-indice-lifecycle
                    mountPath: /etc/indice-lifecycle.json
                    readOnly: true
                    subPath: indice-lifecycle.json
                -   name: dockersock
                    mountPath: /var/run/docker.sock
                -   name: proc
                    mountPath: /hostfs/proc
                    readOnly: true
                -   name: cgroup
                    mountPath: /hostfs/sys/fs/cgroup
                    readOnly: true
                -   name: metricbeat-persistent-storage
                    mountPath: /var/lib/metricbeat/data
            volumes:
            -   name: proc
                hostPath:
                    path: /proc
            -   name: cgroup
                hostPath:
                    path: /sys/fs/cgroup
            -   name: dockersock
                hostPath:
                    path: /var/run/docker.sock
            -   name: config
                configMap:
                    defaultMode: 0600
                    name: metricbeat-config
            -   name: metricbeat-indice-lifecycle
                configMap:
                    defaultMode: 0600
                    name: metricbeat-indice-lifecycle
            -   name: metricbeat-persistent-storage
                persistentVolumeClaim:
                    claimName: metricbeat-pvc
