development/packetbeat.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: packetbeat
    namespace: development-monitoring
    labels:
        app: packetbeat
spec:
    selector:
        matchLabels:
            app: packetbeat
    template:
        metadata:
            labels:
                app: packetbeat
        spec:
            serviceAccountName: packetbeat
            terminationGracePeriodSeconds: 30
            hostNetwork: true
            dnsPolicy: ClusterFirstWithHostNet
            containers:
            -   name: packetbeat
                image: docker.elastic.co/beats/packetbeat:7.5.1
                imagePullPolicy: Always
                args: [
                    "-c", "/etc/packetbeat.yml",
                    "-e"
                ]
                securityContext:
                    runAsUser: 0
                    capabilities:
                        add:
                        -   NET_ADMIN
                resources:
                    limits:
                        memory: 200Mi
                    requests:
                        cpu: 100m
                        memory: 100Mi
                volumeMounts:
                -   name: config
                    mountPath: /etc/packetbeat.yml
                    readOnly: true
                    subPath: packetbeat.yml
                -   name: packetbeat-persistent-storage
                    mountPath: /usr/share/packetbeat/data
            volumes:
            -   name: config
                configMap:
                    defaultMode: 0600
                    name: packetbeat-config
            -   name: packetbeat-persistent-storage
                persistentVolumeClaim:
                    claimName: packetbeat-pvc
