development/apm-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: staging-monitoring
  name: apm-server
  labels:
    app: apm-server
spec:
  ports:
  - port: 8200
    name: apm-server
  selector:
    app: apm-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: staging-monitoring
  name: apm-server
  labels:
    app: apm-server
spec:
  selector:
    matchLabels:
      app: apm-server
  replicas: 1
  template:
    metadata:
      labels:
        app: apm-server
    spec:
      containers:
      - name: apm-server
        image: docker.elastic.co/apm/apm-server:7.5.0
        ports:
        - containerPort: 8200
          name: apm-server
        volumeMounts:
        - name: config
          mountPath: /usr/share/apm-server/apm-server.yml
          readOnly: true
          subPath: apm-server.yml
      volumes:
      - name: config
        configMap:
          name: apm-server-config
---
