development/apm-server.yml
---
apiVersion: v1
kind: Service
metadata:
    namespace: development-monitoring
    name: apm-server
    labels:
        app: apm-server
spec:
    ports:
    -   port: 8200
        name: transport
    selector:
        app: apm-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: development-monitoring
    name: apm-server
    labels:
        app: development-monitoring
spec:
    replicas: 1
    selector:
        matchLabels:
            app: apm-server
    template:
        metadata:
            labels:
                app: apm-server
        spec:
            containers:
            -   name: apm-server
                image: docker.elastic.co/apm/apm-server:7.5.1
                ports:
                -   containerPort: 8200
                    name: transport
                volumeMounts:
                -   name: config
                    mountPath: /usr/share/apm-server/apm-server.yml
                    readOnly: true
                    subPath: apm-server.yml
            volumes:
            -   name: config
                configMap:
                    name: apm-server-config
---
