development/elasticsearch-client.yml
---
apiVersion: v1
kind: Service
metadata:
    namespace: development-monitoring
    name: elasticsearch-client
    labels:
        app: elasticsearch
        role: client
spec:
    type: NodePort
    ports:
    -   port: 9200
        name: client
        protocol: TCP
        targetPort: 9200
    -   port: 9300
        name: transport
    selector:
        app: elasticsearch
        role: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: development-monitoring
    name: elasticsearch-client
    labels:
        app: elasticsearch
        role: client
spec:
    replicas: 1
    selector:
        matchLabels:
            app: elasticsearch
            role: client
    template:
        metadata:
            labels:
                app: elasticsearch
                role: client
        spec:
            containers:
            -   name: elasticsearch-client
                image: docker.elastic.co/elasticsearch/elasticsearch:7.5.1
                # resources:
                #     limits:
                #         cpu: 1000m
                #         memory: 2000Mi
                #     requests:
                #         cpu: 500m
                #         memory: 1000Mi
                ports: 
                -   containerPort: 9200
                    name: client
                -   containerPort: 9300
                    name: transport
                volumeMounts:
                -   name: config
                    mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
                    readOnly: true
                    subPath: elasticsearch.yml
                -   name: elasticsearch-persistent-storage
                    mountPath: /data
            volumes:
            -   name: config
                configMap:
                    name: elasticsearch-client-config
            -   name: elasticsearch-persistent-storage
                persistentVolumeClaim:
                    claimName: elasticsearch-client-pvc
