development/elasticsearch-data.yml
---
apiVersion: v1
kind: Service
metadata:
    namespace: development-monitoring
    name: elasticsearch-data
    labels: 
        app: elasticsearch
        role: data
spec:
    ports:
    -   port: 9300
        name: transport
    selector:
        app: elasticsearch
        role: data
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    namespace: development-monitoring
    name: elasticsearch-data
    labels:
        app: elasticsearch
        role: data
spec:
    serviceName: "elasticsearch-data"
    replicas: 1
    selector:
        matchLabels:
            app: elasticsearch
            role: data
    template:
        metadata:
            labels:
                app: elasticsearch
                role: data
        spec:
            containers:
            -   name: elasticsearch-data
                image: docker.elastic.co/elasticsearch/elasticsearch:7.5.1
                # resources:
                #     limits:
                #         cpu: 1000m
                #         memory: 2000Mi
                #     requests:
                #         cpu: 500m
                #         memory: 1000Mi
                ports: 
                -   containerPort: 9300 
                    name: transport
                volumeMounts:
                -   name: config
                    mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
                    subPath: elasticsearch.yml
                -   name: elasticsearch-persistent-storage
                    mountPath: /data
            volumes:
            -   name: config
                configMap:
                    name: elasticsearch-data-config
            -   name: elasticsearch-persistent-storage
                persistentVolumeClaim:
                    claimName: elasticsearch-data-pvc
---
