development/elasticsearch-master.yml
---
apiVersion: v1
kind: Service
metadata:
    namespace: development-monitoring
    name: elasticsearch-master
    labels:
        app: elasticsearch
        role: master
spec:
    ports:
    -   port: 9300
        name: transport
    selector:
        app: elasticsearch
        role: master
---
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: development-monitoring
    name: elasticsearch-master
    labels:
        app: elasticsearch
        role: master
spec:
    replicas: 1
    selector:
        matchLabels:
            app: elasticsearch
            role: master
    template:
        metadata:
            labels:
                app: elasticsearch
                role: master
        spec:
            containers:
            -   name: elasticsearch-master
                image: docker.elastic.io/elasticsearch/elasticsearch:7.5.1
                # resources:
                #     limits:
                #         cpu: 1000m
                #         memory: 2000Mi
                #     requests:
                #         cpu: 500m
                #         memory: 1000Mi
                ports:
                -   containerPort: 9300
                    name: transport
                volumeMounts:
                -   name: elasticsearch-persistent-storage
                    mountPath: /usr/share/elasticsearch/data
                -   name: config
                    mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
                    readOnly: true
                    subPath: elasticsearch.yml
            volumes:
            -   name: config
                configMap:
                    name: elasticsearch-config
            -   name: elasticsearch-persistent-storage
                persistentVolumeClaim:
                    claimName: elasticsearch-master-pvc
---
