development/elasticsearch.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: development-monitoring
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  ports:
  - port: 9200
    name: client
  - port: 9300
    name: transport
  selector:
    app: elasticsearch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: development-monitoring
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  serviceName: "elasticsearch"
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
        # resources:
        #   limits:
        #       cpu: 1000m
        #       memory: 2000Mi
        #   requests:
        #       cpu: 500m
        #       memory: 1000Mi
        # env:
        # - name: "ES_JAVA_OPTS"
        #   value: "-Xms1024m -Xmx1024m"
        ports:
        - containerPort: 9200
          name: client
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: persistent-storage
          mountPath: /usr/share/elasticsearch/data
        - name: config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          readOnly: true
          subPath: elasticsearch.yml
      volumes:
      - name: config
        configMap:
          name: elasticsearch-config
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: elasticsearch-pvc
---
