development/traefik-ingress.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
    name: traefik-ingress-controller
    namespace: development-monitoring
    labels:
        app: traefik-ingress
spec:
    replicas: 1
    selector:
        matchLabels:
            app: traefik-ingress
    template:
        metadata:
            labels:
                app: traefik-ingress
                name: traefik-ingress
        spec:
            serviceAccountName: traefik-ingress-controller
            terminationGracePeriodSeconds:  60
            containers:
            -   image: traefik
                name: traefik-ingress-controller
                args:
                - --api.insecure
                - --accesslog
                - --entrypoints.web.Address=:8000
                - --entrypoints.websecure.Address=:4443
                - --providers.kubernetescrd
                - --certificatesresolvers.default.acme.tlschallenge
                - --certificatesresolvers.default.acme.email=foo@you.com
                - --certificatesresolvers.default.acme.storage=acme.json
                # Please note that this is the staging Let's Encrypt server.
                # Once you get things working, you should remove that whole line altogether.
                - --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
                ports:
                -   name: web  
                    containerPort: 80
                -   name: web-secure  
                    containerPort: 443
                -   name: admin
                    containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
    name: traefik-ingress-service
    namespace: development-monitoring
spec:
    selector:
        app: traefik-ingress
    ports:
        -   protocol: TCP
            port: 80
            name: web   
        -   protocol: TCP
            port: 8080
            name: admin
        -   protocol: TCP
            port: 443
            name: web-secure
---
