development/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: development-monitoring
spec:
  rules:
  - host: development-monitoring.tebengan.id
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 5601
  tls:
  - hosts:
    - development-monitoring.tebengan.id
    secretName: development-ssl-comodo-2
